--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -23,6 +23,8 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	width: 100%;
+	max-width: 375px;
 }
 
 header {
@@ -37,7 +39,8 @@ header {
 	grid-column: 2/-2;
 	grid-row: 1/1;
 	justify-self: center;
-	margin: 3em 0 2em 0;
+	margin-top: 52px;
+	margin-bottom: 47px;
 }
 
 .left-side {
@@ -47,10 +50,11 @@ header {
 	display: flex;
 	justify-content: space-around;
 	position: relative;
-	max-width: 100%;
-	height: auto;
-	gap: 17px;
-	right: 17px;
+	min-height: 188px;
+	height: 100%;
+	gap: 16px;
+	right: 10px;
+	align-items: flex-start;
 }
 
 .right-side {
@@ -61,11 +65,13 @@ header {
 	align-self: end;
 	display: flex;
 	justify-content: space-around;
-	max-width: 100%;
-	height: auto;
-	gap: 17px;
-	left: 17px;
+	min-height: 188px;
+	height: 100%;
+	gap: 16px;
+	left: 10px;
+	align-items: flex-start;
 }
+
 .avatar-group-1 {
 	display: flex;
 	flex-direction: column;
@@ -76,40 +82,52 @@ header {
 
 .avatar-group-1.down-left {
 	position: relative;
-	top: 40px;
+	top: 20px;
 	left: 0;
 }
 
 .avatar-group-1.down-right {
 	position: relative;
-	top: 40px;
+	top: 20px;
 	right: 0;
+}
+
+.avatar {
+	margin: 0;
+	padding: 0;
+	min-width: 56px;
+	width: 100%;
+	min-height: 56px;
+	height: 100%;
 }
 
 .avatar img {
 	border-radius: 50%;
-	width: auto;
+	width: 100%;
 	height: auto;
-	max-height: 100%;
-	max-width: 100%;
+	min-height: 54px;
+	min-width: 56px;
 }
 
 .up-text {
 	grid-column: 1/-1;
 	grid-row: 3/3;
-	max-width: 540px;
-	margin-top: 10em;
+
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 }
 
 .up-text h1 {
-	padding: 22px;
+	padding: 0 42px 0 42px;
 	text-align: center;
 	line-height: 44px;
 	font-size: 40px;
-	margin-bottom: 20px;
 	font-weight: 900;
 	font-family: Red Hat Display;
 	font-style: normal;
+	margin-bottom: 18px;
 }
 
 .up-text p {
@@ -117,15 +135,14 @@ header {
 	color: rgb(135, 135, 157);
 	font-size: 16px;
 	line-height: 26px;
-	margin: 2em auto 2em auto;
 	width: 88%;
+	margin-bottom: 32px;
 }
 
 .download-btn {
 	background: rgb(77, 150, 169);
 	font-size: 16px;
-	margin-top: 10px;
-	margin-bottom: 20px;
+	margin-bottom: 16px;
 	padding: 20px;
 	color: white;
 	border-radius: 29px;
@@ -136,6 +153,10 @@ header {
 	line-height: 26px;
 	font-family: "Red Hat Display", sans-serif;
 	padding: 0;
+}
+
+.download-btn:hover {
+	background: rgb(113, 192, 212);
 }
 
 .download-btn span {
@@ -153,7 +174,11 @@ header {
 	font-family: "Red Hat Display", sans-serif;
 	padding: 0;
 	border: none;
-	margin-bottom: 50px;
+	margin-bottom: 64px;
+}
+
+.violet-btn:hover {
+	background: rgb(177, 139, 221);
 }
 
 .buttons {
@@ -175,8 +200,8 @@ header {
 	box-sizing: border-box;
 	font-family: Red Hat Display;
 	font-size: 16px;
-	margin-top: 6em;
-	margin-bottom: 2em;
+	margin-top: 85px;
+	margin-bottom: 64px;
 }
 
 .button-01 p {
@@ -199,9 +224,9 @@ header {
 .grid-pictures {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	gap: 20px;
-	padding: 20px;
-	margin-bottom: 20px;
+	gap: 22px;
+	padding: 0 24px 0 24px;
+	margin-bottom: 64px;
 }
 
 .top-left,
@@ -210,6 +235,7 @@ header {
 .bottom-right {
 	object-fit: cover;
 	width: 100%;
+	height: 100%;
 }
 
 .top-left > img,
@@ -223,22 +249,23 @@ header {
 }
 
 .down-text {
-	margin: 20px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
 	max-width: 573px;
+	margin-bottom: 180px;
 }
 
-.down-text h4 {
+.down-text h2 {
 	text-align: center;
 	font-size: 16px;
 	letter-spacing: 4px;
 	text-transform: uppercase;
 	color: rgb(77, 150, 169);
 	font-weight: 900;
+	margin-bottom: 24px;
 }
 
 .down-text h1 {
@@ -248,14 +275,14 @@ header {
 	text-align: center;
 	color: rgb(40, 40, 61);
 	width: 80%;
-	padding-top: 1em;
+	margin-bottom: 32px;
 }
 
 .down-text p {
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 26px;
-	padding: 25px;
+	padding: 0 25px 0 25px;
 	text-align: center;
 	color: #87879d;
 }
@@ -301,7 +328,8 @@ header {
 	position: relative;
 	z-index: 1;
 	color: #fafafa;
-	margin-top: 2em;
+	margin-top: 23px;
+	margin-bottom: 24px;
 }
 
 .bottom-card p {
@@ -312,8 +340,8 @@ header {
 	line-height: 26px;
 	text-align: center;
 	color: #fafafa;
-	margin: 5px 10px;
-	padding: 20px;
+	margin-bottom: 35px;
+	padding: 0 30px 0 30px;
 }
 
 .button-02 {
@@ -331,11 +359,10 @@ header {
 	font-family: Red Hat Display;
 	font-size: 16px;
 	margin-top: 50px;
-	margin-bottom: 30px;
 	z-index: 1;
 }
 
-.button-02 p {
+.button-02 span {
 	font-size: 16px;
 	font-weight: 900;
 	color: #5b5bc6;
@@ -357,8 +384,7 @@ header {
 	z-index: 1;
 	background: rgb(133, 95, 177);
 	font-size: 16px;
-	margin-top: 0.5em;
-	margin-bottom: 2em;
+
 	padding: 20px;
 	color: white;
 	border-radius: 29px;
@@ -372,14 +398,30 @@ header {
 	font-weight: 900;
 }
 
+.download-btn-violet:hover {
+	background: rgb(177, 139, 221);
+}
+
 .download-btn-violet span {
 	color: rgb(217, 184, 255);
 }
 
-@media only screen and (min-width: 540px) {
-	.up-text {
-		grid-column: 2/-2;
+@media only screen and (min-width: 400px) {
+	.card {
+		width: 100%;
+		max-width: 768px;
 	}
+
+	.avatar img {
+		width: 100%;
+		height: auto;
+		max-width: 110px;
+		max-height: 110px;
+	}
+
+	/* .up-text {
+		grid-column: 2/-2;
+	} */
 }
 
 @media screen and (min-width: 768px) {
@@ -388,13 +430,53 @@ header {
 		justify-content: center;
 	}
 
+	.logo {
+		margin-top: 48px;
+		margin-bottom: 64px;
+	}
+
+	.left-side {
+		right: 16px;
+	}
+
+	.right-side {
+		left: 16px;
+	}
+
+	.left-side,
+	.right-side {
+		gap: 32px;
+	}
+
+	.avatar img {
+		width: 110px;
+		height: 110px;
+	}
+
+	.avatar-group-1 {
+		row-gap: 26px;
+	}
+
+	.avatar-group-1.down-left,
+	.avatar-group-1.down-right {
+		top: 50px;
+	}
+
 	.up-text {
-		margin-top: 5em;
+		margin-top: 105px;
+		margin-bottom: 72px;
 	}
 
 	.up-text h1 {
 		font-size: 48px;
 		line-height: 48px;
+		padding: 0;
+		margin-bottom: 24px;
+	}
+
+	.up-text p {
+		width: 457px;
+		margin-bottom: 24px;
 	}
 
 	.buttons {
@@ -413,13 +495,35 @@ header {
 	}
 
 	.button-01 {
-		margin-top: 9em;
+		margin-bottom: 75px;
+		filter: drop-shadow(0px 0px 0px rgb(255, 255, 255));
 	}
 
 	.grid-pictures {
 		display: flex;
 		justify-content: space-evenly;
-		gap: 0.5em;
+		gap: 11px;
+		padding: 0 40px 0 40px;
+		margin-bottom: 48px;
+	}
+
+	.down-text {
+		margin-bottom: 3px;
+	}
+
+	.down-text h2 {
+		margin-bottom: 16px;
+	}
+
+	.down-text h1 {
+		width: 445px;
+		font-size: 40px;
+		line-height: 44px;
+	}
+
+	.down-text p {
+		width: 573px;
+		padding: 0;
 	}
 
 	.bottom-card {
@@ -432,21 +536,35 @@ header {
 
 	.bottom-card h1 {
 		display: inline-block;
-		width: 50%;
-		margin-top: 1em;
+		width: 457px;
+		margin-bottom: 32px;
+		margin-top: 30px;
 		font-size: 40px;
 		line-height: 44px;
 	}
 
 	.bottom-card p {
 		display: inline-block;
-		width: 80%;
+		width: 573px;
 		padding: 0;
-		margin-top: 2em;
-		margin-bottom: 2em;
+		margin-bottom: 40px;
 	}
 
-	@media screen and (min-width: 1200px) {
+	.download-btn-violet {
+		margin: 0;
+	}
+
+	@media screen and (min-width: 1440px) {
+		.card {
+			width: 100%;
+			max-width: 1440px;
+		}
+
+		.logo {
+			margin-top: 80px;
+			margin-bottom: 61px;
+		}
+
 		.left-side {
 			grid-column: 1/2;
 			justify-self: baseline;
@@ -465,14 +583,77 @@ header {
 			grid-column: 1/-1;
 			grid-row: 2/2;
 			margin: 0;
+			width: 540px;
+			margin-bottom: 117px;
+		}
+
+		.up-text h1 {
+			width: 445px;
+			font-size: 64px;
+			line-height: 64px;
+			margin-bottom: 34px;
+		}
+
+		.up-text p {
+			font-size: 18px;
+			width: 540px;
+			margin-bottom: 32px;
+		}
+
+		.avatar img {
+			min-width: 110px;
+			min-height: 110px;
+		}
+
+		.button-01 {
+			margin-bottom: 64px;
+		}
+
+		.grid-pictures {
+			width: 1110px;
+			padding: 0;
+			gap: 30px;
+			margin-bottom: 80px;
+		}
+
+		.down-text p {
+			font-size: 18px;
+			width: 540px;
+		}
+
+		.bottom-card {
+			align-items: center;
+			justify-content: center;
+			margin-top: 184px;
+			width: 100%;
+			height: 0;
+			padding-top: 21.38%;
 		}
 
 		.bottom-content {
 			flex-direction: row;
+			position: absolute;
+			bottom: 110px;
+		}
+
+		.bottom-card h1 {
+			width: 350px;
+			text-align: left;
+			margin: 0;
+			margin-right: 125px;
+		}
+
+		.bottom-card p {
+			width: 350px;
+			text-align: left;
+			margin: 0;
+			margin-right: 92px;
 		}
 
 		.bottom-card::before {
 			background-image: url(/Dizajn/meet-landing-page/starter-code/assets/desktop/image-footer.jpg);
+			background-size: contain;
+			background-repeat: no-repeat;
 		}
 	}
 }
