--- a/assets/style/sass/_down-text.scss
+++ b/assets/style/sass/_down-text.scss
@@ -33,7 +33,7 @@
 		font-size: 32px;
 		line-height: 36px;
 		text-align: center;
-		color: rgb(40, 40, 61);
+		color: $blackishTextColor;
 		width: 80%;
 		margin-bottom: 32px;
 
@@ -50,7 +50,7 @@
 		line-height: 26px;
 		padding: 0 25px 0 25px;
 		text-align: center;
-		color: $paragrafColor;
+		color: $greyishColor;
 
 		@include screen-min($tablet-width) {
 			width: 573px;
