--- a/assets/style/sass/_variables.scss
+++ b/assets/style/sass/_variables.scss
@@ -1,11 +1,13 @@
 $primaryFont: "Red Hat Display", sans-serif;
-$dwnBtnPrimaryColor: rgb(77, 150, 169);
-$dwnBtnHoverColor: rgb(113, 192, 212);
-$dwnBrnSpanColor: rgb(143, 227, 249);
-$whatIsBtnPrimaryColor:rgb(133, 95, 177);
-$whatIsBtnHoverColor: rgb(177, 139, 221);
-$violetBtnSpanColor: rgb(217, 184, 255);
-$greyishColor: rgb(135, 135, 157);
-$paragrafColor: #87879d;
+$dwnBtnPrimaryColor: #4D96A9;
+$dwnBtnHoverColor: #71C0D4;
+$dwnBrnSpanColor: #8FE3F9;
+$blackishTextColor:#28283D;
+$whatIsBtnPrimaryColor:#855FB1;
+$whatIsBtnHoverColor: #B18BDD;
+$violetBtnSpanColor: #D9B8FF;
+$greyishColor: #87879D;
 $button02Color: #fafafa;
 $button02SpanColor: #5b5bc6;
+$border01Color: rgba(135, 135, 157, 0.25);
+$shadowColor: rgba(0, 0, 0, 0.25);
