--- a/assets/style/sass/style.css
+++ b/assets/style/sass/style.css
@@ -227,6 +227,7 @@ header .up-text h1 {
   font-size: 40px;
   font-weight: 900;
   font-family: "Red Hat Display", sans-serif;
+  color: #28283D;
   font-style: normal;
   margin-bottom: 18px;
 }
@@ -249,11 +250,12 @@ header .up-text h1 {
 }
 header .up-text p {
   text-align: center;
-  color: #87879d;
+  color: #87879D;
   font-size: 16px;
   line-height: 26px;
   width: 88%;
   margin-bottom: 32px;
+  font-weight: 500;
 }
 @media only screen and (min-width: 768px) {
   header .up-text p {
@@ -281,11 +283,11 @@ header .up-text .buttons {
   }
 }
 header .up-text .buttons .download-btn {
-  background: #4d96a9;
+  background: #4D96A9;
   font-size: 16px;
   margin-bottom: 16px;
   padding: 20px;
-  color: white;
+  color: #fafafa;
   border-radius: 29px;
   border: none;
   width: 193px;
@@ -295,11 +297,8 @@ header .up-text .buttons .download-btn {
   font-family: "Red Hat Display", sans-serif;
   padding: 0;
 }
-header .up-text .buttons .download-btn:hover {
-  background: #71c0d4;
-}
 header .up-text .buttons .download-btn span {
-  color: #8fe3f9;
+  color: #8FE3F9;
 }
 @media only screen and (min-width: 768px) {
   header .up-text .buttons .download-btn {
@@ -307,10 +306,19 @@ header .up-text .buttons .download-btn span {
     filter: none;
   }
 }
+@media only screen and (min-width: 1440px) {
+  header .up-text .buttons .download-btn:hover {
+    background: #71C0D4;
+    cursor: pointer;
+  }
+  header .up-text .buttons .download-btn:active {
+    background: #4D96A9;
+  }
+}
 header .up-text .buttons .violet-btn {
-  background: #855fb1;
+  background: #855FB1;
   font-size: 16px;
-  color: white;
+  color: #fafafa;
   padding: 20px;
   border-radius: 29px;
   width: 139px;
@@ -320,12 +328,18 @@ header .up-text .buttons .violet-btn {
   border: none;
   margin-bottom: 64px;
 }
-header .up-text .buttons .violet-btn:hover {
-  background: #b18bdd;
-}
 @media only screen and (min-width: 768px) {
   header .up-text .buttons .violet-btn {
     margin: 0.5em;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  header .up-text .buttons .violet-btn:hover {
+    background: #B18BDD;
+    cursor: pointer;
+  }
+  header .up-text .buttons .violet-btn:active {
+    background: #855FB1;
   }
 }
 
@@ -350,20 +364,21 @@ header .up-text .buttons .violet-btn:hover {
   position: absolute;
   mix-blend-mode: normal;
   height: 84px;
-  background: #87879d;
+  background: #87879D;
   bottom: 55px;
   opacity: 0.25;
-  border: 1px solid #87879d;
+  border: 1px solid #87879D;
 }
-.button-01 p {
-  color: #87879d;
+.button-01 a {
+  color: #87879D;
   font-size: 16px;
   font-weight: 900;
+  text-decoration: none;
 }
 @media only screen and (min-width: 768px) {
   .button-01 {
     margin-bottom: 75px;
-    filter: drop-shadow(0px 0px 0px white);
+    filter: drop-shadow(0px 0px 0px #fafafa);
   }
 }
 @media only screen and (min-width: 1440px) {
@@ -433,7 +448,7 @@ header .up-text .buttons .violet-btn:hover {
   font-size: 16px;
   letter-spacing: 4px;
   text-transform: uppercase;
-  color: #4d96a9;
+  color: #4D96A9;
   font-weight: 900;
   margin-bottom: 24px;
 }
@@ -447,7 +462,7 @@ header .up-text .buttons .violet-btn:hover {
   font-size: 32px;
   line-height: 36px;
   text-align: center;
-  color: #28283d;
+  color: #28283D;
   width: 80%;
   margin-bottom: 32px;
 }
@@ -464,7 +479,7 @@ header .up-text .buttons .violet-btn:hover {
   line-height: 26px;
   padding: 0 25px 0 25px;
   text-align: center;
-  color: #87879d;
+  color: #87879D;
 }
 @media only screen and (min-width: 768px) {
   .down-text p {
@@ -484,7 +499,7 @@ header .up-text .buttons .violet-btn:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: #4d96a9;
+  background: #4D96A9;
   position: relative;
   height: 426px;
   width: 100%;
@@ -552,15 +567,16 @@ header .up-text .buttons .violet-btn:hover {
   position: absolute;
   mix-blend-mode: normal;
   height: 84px;
-  background: #87879d;
+  background: #87879D;
   bottom: 55px;
   opacity: 0.25;
-  border: 1px solid #87879d;
+  border: 1px solid #87879D;
 }
-.bottom-card .button-02 span {
+.bottom-card .button-02 a {
   font-size: 16px;
   font-weight: 900;
-  color: #87879d;
+  color: #87879D;
+  text-decoration: none;
 }
 .bottom-card .bottom-content {
   display: flex;
@@ -634,29 +650,35 @@ header .up-text .buttons .violet-btn:hover {
 .bottom-card .bottom-content .download-btn-violet {
   position: relative;
   z-index: 1;
-  background: #855fb1;
+  background: #855FB1;
   font-size: 16px;
   padding: 20px;
-  color: white;
+  color: #fafafa;
   border-radius: 29px;
   border: none;
   width: 193px;
   height: 58px;
   line-height: 26px;
-  font-family: "Red Hat Display";
+  font-family: "Red Hat Display", sans-serif;
   font-style: normal;
   padding: 0;
   font-weight: 900;
 }
-.bottom-card .bottom-content .download-btn-violet:hover {
-  background: #b18bdd;
-}
 .bottom-card .bottom-content .download-btn-violet span {
-  color: #d9b8ff;
+  color: #D9B8FF;
 }
 @media only screen and (min-width: 768px) {
   .bottom-card .bottom-content .download-btn-violet {
     margin: 0;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  .bottom-card .bottom-content .download-btn-violet:hover {
+    background: #B18BDD;
+    cursor: pointer;
+  }
+  .bottom-card .bottom-content .download-btn-violet:active {
+    background: #855FB1;
   }
 }
 
