--- a/assets/style/sass/_button01.scss
+++ b/assets/style/sass/_button01.scss
@@ -9,8 +9,8 @@
 	width: 56px;
 	height: 56px;
 	border-radius: 50%;
-	border: 1px solid rgba(135, 135, 157, 0.25);
-	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+	border: 1px solid $border01Color;
+	filter: drop-shadow(0px 4px 4px $shadowColor);
 	box-sizing: border-box;
 	font-family: $primaryFont;
 	font-size: 16px;
@@ -24,18 +24,19 @@
 		background: $greyishColor;
 		bottom: 55px;
 		opacity: 0.25;
-		border: 1px solid $paragrafColor;
+		border: 1px solid $greyishColor;
 	}
 
-	p {
+	a {
 		color: $greyishColor;
 		font-size: 16px;
 		font-weight: 900;
+		text-decoration: none;
 	}
 
 	@include screen-min($tablet-width) {
 		margin-bottom: 75px;
-		filter: drop-shadow(0px 0px 0px rgb(255, 255, 255));
+		filter: drop-shadow(0px 0px 0px $button02Color);
 	}
 
 	@include screen-min($desktop-width) {
